[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pressureplate"
version = "0.0.1"
description = "Multi-agent environment for reinforcement learning"
readme = "README.md"
authors = [
    { name = "Trevor McInroe" }
]
# Uncomment and set the URL if needed
# homepage = "https://github.com/semitable/boulder-push"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7"
]

dependencies = [
    "numpy",
    "gym>=0.15",
    "pyglet"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools]
packages = { find = { exclude = ["contrib", "docs", "tests"] } }
include-package-data = true
