[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pressureplate"
version = "0.0.1"
requires-python = ">= 3.7"
description = "Multi-agent environment for reinforcement learning"
readme = "README.md"
authors = [
    { name = "Trevor McInroe" }
]

dependencies = [
    "numpy",
    "gym>=0.15",
    "pyglet"
]

[project.optional-dependencies]
test = [
    "pytest"
]